# stack-schematic-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
stack_schematic_generator/: __init__.py  coordinate.py  layer.py  stack.py  stack_schematic.mplstyle
tests/: test_stack.py
