[project]
name = "stack-schematic-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Yukihiro",email = "12211343+y-marui@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "matplotlib-extension @ git+https://github.com/y-marui/matplotlib-extension.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
